# boosha-agentic-corso-maf

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml
maf/Extra/: README.md  ambiente-python-uv.md  chiavi-api.md
maf/ep01_primo_agente/: README.md  agente.py  pratica.ipynb
maf/ep02_tools_mcp/: README.md  agente.py  output_dossier.json  pratica.ipynb
