[project]
name = "boosha-agentic-corso-maf"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "agent-framework-core>=1.9.0",
    "agent-framework-ollama>=1.0.0b260521",
    "agent-framework-openai>=1.8.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
]
