[project]
name = "boosha-agentic-corso-maf"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "agent-framework-core>=1.9.0",
    "agent-framework-ollama>=1.0.0b260521",
    "agent-framework-openai>=1.8.2",
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
]
